--- a/SuplexSampleApp/SuplexSampleApp.csproj
+++ b/SuplexSampleApp/SuplexSampleApp.csproj
@@ -58,6 +58,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Employee.cs" />
+    <Compile Include="Classes\EmployeeDataAccessLayer.cs" />
     <Compile Include="MainDlg.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -66,7 +68,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UIExtensions.cs" />
+    <Compile Include="Classes\UIExtensions.cs" />
     <EmbeddedResource Include="MainDlg.resx">
       <DependentUpon>MainDlg.cs</DependentUpon>
     </EmbeddedResource>
